Corrected first page

--- a/de_whitepaper.tex
+++ b/de_whitepaper.tex
@@ -70,7 +70,7 @@
 %\includepdf[pages=1]{cover}
 \hyphenpenalty=750
 
-\title{\textbf{Loopring:}\\\textbf{Ein dezentrales Token-Austauschprotokoll}}
+\title{\textbf{Loopring:}\\\textbf{Ein dezentrales Protokoll zum Tokenhandel}}
 \author{
  Daniel Wang\\
   \texttt{daniel@loopring.org}\\
@@ -119,18 +119,18 @@
 
 
 \begin{abstract}
-Loopring ist ein offenes Protokoll um dezentralisierte Handelsplattformen zu realisieren. Loopring operiert über einen Zusammenschluss von mehreren Smart Contracts welche für den Handel und die Regulierung verantwortlich sind, über eine Gruppe von Akteuren, die fernab der Blockchain agiert und die Aufträge zusammenfasst und verteilt. Loopring ist ein freies, erweiterbares Protokoll und agiert als standardisiertes Framework für dezentralisierte Applikationen (dApps), die die Möglichkeiten einer Handelsplattform beinhalten. Seine interoperablen Standards ermöglichen einen vertrauensfreien, anonymen Handel. Eine wichtige Verbesserung gegenüber den derzeitigen dezentralen Austauschprotokollen ist die Möglichkeit, dass Aufträge mit anderen, unterschiedlichen Aufträgen gemischt werden können. Dadurch werden die Zwänge von Zwei-Token-Handelspaaren vermieden werden und die Liquidität wird drastisch verbessert. Loopring verwendet auch eine einzigartige und robuste Lösung, um ein Front-Running zu verhindern: den unfairen Versuch, Transaktionen schneller als der ursprüngliche Lösungsanbieter in einem Block einzureichen. Loopring ist Blockchain-agnostisch und in jeder Blockchain mit Smart-Contract-Funktionalität einsetzbar. Zum jetzigen Zeitpunkt ist es auf Ethereum \cite{buterin2017ethereum} \cite{wood2014ethereum}, Qtum \cite{dai2017smart} und NEO \cite{atterlonn2018distributed} in Entwicklung.
+Loopring ist ein offenes Protokoll, um dezentrale Handelsplattformen zu vernetzen. Mittels öffentlicher Smart Contracts zur Ausführung des Tokenhandels werden Aufträge mehrerer Akteure gesammelt, ausgewertet und unabhängig der Blockchain durchgeführt. Es handelt sich um ein freies, erweiterbares Protokoll und dient als standardisierter Grundbaustein für dezentrale Applikationen (dApps), die den Handel von Tokens umfassen. Interoperable Standards ermöglichen einen vertrauensfreien, anonymen Handel. Eine wichtige Verbesserung gegenüber den derzeitigen dezentralen Austauschprotokollen ist die Möglichkeit, dass Aufträge mit anderen, unterschiedlichen Aufträgen gemischt werden können. Dadurch entfällt die Notwendigkeit von Zwei-Token-Handelspaaren und die Liquidität wird drastisch verbessert. Loopring verwendet eine einzigartige und solide Lösung, um ein Front-Running zu verhindern: der unfaire Versuch, Transaktionen schneller als der ursprüngliche Tauschanbieter in einen Block einzureichen. Loopring ist Blockchain-unabhängig und auf jede Blockchain mit Smart-Contract-Funktionalität anwendbar. Derzeit ist Loopring auf Ethereum \cite{buterin2017ethereum} \cite{wood2014ethereum} und Qtum \cite{dai2017smart} nutzbar und befindet sich für NEO \cite{atterlonn2018distributed} in der Entwicklung.
 \end{abstract}
 
 
 
 \begin{multicols}{2}
 \section{Einleitung\label{sec:introduction}}
-Mit der Verbreitung von Blockchain-basierten Vermögenswerten hat die Notwendigkeit diese Vermögenswerte untereinander auszutauschen deutlich zugenommen. Da tausende neue Token eingeführt werden, einschließlich traditionelle Vermögenswerte, ist dies ein wachsendes Bedürfnis. Unabhängig davon, ob Token für spekulatives Handeln ausgetauscht werden oder über ihre nativen Utility-Token in Access-Netzwerke umgewandelt werden, ist die Fähigkeit, ein Cryptoasset gegen ein anderes auszutauschen für das größere Ökosystem grundlegend. In der Tat gibt es eine potentielle Energie in Vermögenswerten \cite{desotocapital} und um diese Energie zu realisieren - das Entsperren von Kapital - erfordert nicht nur die Eigentumsrechte, sondern auch die Fähigkeit diese Vermögenswerte frei zu transferieren und zu transformieren.
+Mit der Verbreitung von Blockchain-basierten Vermögenswerten hat die Notwendigkeit, diese Güter untereinander auszutauschen, deutlich zugenommen. Da tausende neue Token zusätzlich zu traditionellen Vermögenswerte eingeführt werden, gibt es eine steigende Nachfrage. Unabhängig davon, ob Tokens zum spekulativen Handel oder für den Einsatz als Utility-Tokens auf Plattformen erworben werden, ist es essentiell für ein größeres Ökosystem, Krypto-Vermögenswerte untereinander austauschen zu können. Derzeit herrscht es eine wachsende Dynamik unter Vermögenswerten \cite{desotocapital}. Um diese zu ermöglichen und Kapital freizugeben, sind nicht nur Eigentumsrechte erforderlich, sondern auch die Möglichkeit, diese Vermögenswerte frei zu transferieren und zu transformieren.
 
-Daher ist der vertrauenslose Austausch von Token (Wert) ein überzeugender Anwendungsfall für die Blockchain-Technologie. Bis jetzt haben sich Krypto-Enthusiasten jedoch weitgehend für Token an traditionellen zentralisierten Handelsplattformen entschieden. Das Loopring-Protokoll wird benötigt weil, genau wie Bitcoin pflichtbewusst betonte, dass in Bezug auf elektronisches Geld, \enquote{Die Hauptvorteile gehen verloren, wenn noch eine vertrauenswürdige dritte Partei benötigt wird, um Doppelausgaben zu vermeiden}. Die Hauptvorteile der dezentralen Vermögenswerte gehen auch verloren, wenn sie über eine zentralisierte Handelsplattform laufen müssen. 
+Daher ist der Austausch von Tokens (Werten) ohne Zwischenhändler eine überzeugende Anwendung der Blockchain-Technologie. Dennoch haben sich Krypto-Enthusiasten bislang weitgehend für den Tokenhandel auf traditionellen, zentralisierten Handelsplattformen entschieden. Das Loopring-Protokoll wird benötigt, da - wie Bitcoin \cite{nakamoto2008bitcoin} bereits pflichtgemäß betonte - in Bezug auf elektronisches Geld \enquote{entscheidende Vorteile verloren gehen, wenn noch eine vertrauenswürdige dritte Partei benötigt wird, um doppelte Ausgaben zu vermeiden}. Von daher gehen die Hauptvorteile von dezentralen Vermögenswerten verloren, wenn sie über zentralisierte Handelsplattformen laufen müssen.
 
-Der Handel dezentraler Token an zentralisierten Börsen ist auch aus philosophischer Sicht nicht adäquat, da die Tugenden, die diese dezentralisierten Projekte unterstützen, nicht eingehalten werden können. Es gibt auch zahlreiche praktische Risiken und Einschränkungen bei der Verwendung zentralisierter Vermittlungsstellen, die nachstehend beschrieben werden. Dezentralisierte Handelsplattformen (DEXs) \cite{schuh2015bitshares} \cite{bancor} \cite{kyber} haben versucht, diese Probleme zu Lösen, und in vielen Fällen ist es gelungen Sicherheitsrisiken durch die Verwendung von Blockchains zur Disintermediation zu mindern. Da die Fähigkeiten dezentralisierter Handelsplattformen jedoch zu einer entscheidenden Infrastruktur für die New Economy wird, gibt es erheblichen Spielraum für Leistungsverbesserungen. Loopring möchte Module für diese Infrastruktur mit seinem offenen Protokoll dApp bereitstellen.
+Der Handel dezentraler Tokens an zentralisierten Börsen ist auch aus philosophischer Sicht nicht nachvollziehbar, da die zugrundeliegende Idee, die dezentralisierte Projekte unterstützen, nicht zur Anwendung kommt. Es gibt auch zahlreiche praktische Risiken und Einschränkungen bei der Verwendung zentralisierter Vermittlungsstellen, die nachstehend beschrieben werden. Dezentralisierte Handelsplattformen (DEXs) \cite{schuh2015bitshares} \cite{bancor} \cite{kyber} haben versucht, diese Probleme zu lösen und in vielen Fällen ist es gelungen, Sicherheitsrisiken durch die Verwendung von Blockchains zur Einlagenumschichtung zu mindern. Da die Möglichkeiten dezentraler Handelsplattformen zu einer entscheidenden Infrastruktur für die neue Wirtschaft beitragen, gibt es erheblichen Spielraum für Leistungsverbesserungen. Loopring möchte Module für diese Infrastruktur mittels offenem Protokoll und der Erweiterbarkeit durch dApps bereitstellen.
 
 \section{Aktuelle Handelsplattform-Landschaft\label{sec:current_exchange_landscape}}
 
